--- a/templates/User/profile.html.twig
+++ b/templates/User/profile.html.twig
@@ -4,6 +4,12 @@
 {% block title %}{{ user.firstname }} {{ user.lastname }} Profile{% endblock %}
 
 {% block body %}
+    <ul>
+        <li>{{ user.firstname }}</li>
+        <li>{{ user.lastname }}</li>
+        <li>{{ user.email }}</li>
+        <li>{{ user.birthday|date }}</li>
+    </ul>
     {#
         Fixme afficher sous forme de <ul> <li>
         firstname
@@ -12,10 +18,10 @@
         birthday
     #}
 
-    <ul>
+    {#<ul>
         <li>First name: Foo</li>
         <li>Last name: Bar</li>
         <li>Email: foo.bar@exemple.org</li>
         <li>Birthday: January 1, 1980 00:00</li>
-    </ul>
+    </ul>#}
 {% endblock %}
